# bems

./: .env  .env.local  .eslintrc.json  .gitignore  Cargo.toml  README.md  db_setup.js  db_setup.mjs  db_setup.ts  global.d.ts  logger.ts  middleware.ts  next-env.d.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tailwind.config.ts  test.mjs  tsconfig.json  turbo.json
.cargo/: config.toml
.github/workflows/: CI.yml
app/: README.md  globals.css  layout.tsx  page.module.css  page.tsx
app/@modal/: layout.tsx  template.tsx
app/_contexts/: DarkModeProvider.tsx
app/_lib/: actions.ts  auth.ts
app/_utils/: err.tsx  index.ts  utils.ts
app/admin/: admin.module.css  layout.tsx  page.tsx
app/auth/: layout.tsx  template.tsx
app/components/: Button.tsx  CancelButton.tsx  CardBackgroundForLightMode.tsx  ExplosionImage.tsx  LogoutButton.tsx  Motion.tsx  ParticlesContainer.tsx  SignoutButton.tsx  index.ts
app/contexts/: DarkModeContext.tsx  DarkModeProvider.tsx  IsMobileContext.tsx  index.tsx  mui.tsx
exam/: .gitignore  Cargo.toml  index.d.ts  index.mjs  package.json  pnpm-lock.yaml
exam/.github/workflows/: CI.yml
exam/__test__/: index.spec.cjs
exam/npm/darwin-x64/: README.md  package.json
exam/npm/linux-x64-gnu/: README.md  package.json
exam/npm/win32-x64-msvc/: README.md  package.json
exam/src/: compute.rs  enums.rs  lib.rs
exam/windows/: index.d.ts  index.js
logger/: index.ts
main/: .gitignore
prisma/: schema.prisma
prisma-cli/: Cargo.toml
scripts/: build_script.ps1
src/: lib.rs
(+698 files in other folders)
