[package]
edition = "2021"
name = "query"
version = "0.0.0"

[workspace]
members = ["prisma-cli"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
serde = "1.0.193"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
