[package]
edition = "2021"
name = "bems"


[workspace.dependencies]
tokio = { version = "1.39.2", features = ["rt"] }
napi = { version = "2.16.8", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.16.8"
napi-build = "2.0.1"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.121"

[dependencies]


[workspace]
members = ["exam"]
resolver = "2"



